<resources>
    <string name="app_name">EngWay</string>
    <string name="description_lorem">____Welcome \n to App EngWay</string>
    <string name="text_title_login">Login</string>
    <string name="text_imput_email">E-mail</string>
    <string name="text_imput_name">Nome</string>
    <string name="text_imput_password">Senha</string>
    <string name="btn_enter">Entrar</string>
    <string name="home_welcome">Seja bem vindo(a)!</string>
    <string name="text_continue_no_auth">Continuar sem acesso</string>
    <string name="text_visit">Visitante</string>
    <string name="text_category">Textos</string>
    <string name="text_recommended">Videos</string>
    <string name="text_name_category">Categoria</string>
    <string name="API_key">AIzaSyBGsPAX_vDzN1EiJn7_GyyJqH59gx6GULI</string>
</resources>